# notes-cli

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  setup.py
notes/: notes.py
notes/utils/databases/: general.sqlite3
py_notes/: notes.py
py_notes/utils/databases/: general.sqlite3
pynotes/: __init__.py
pynotes/utils/: db.py
pynotes/utils/databases/: general.sqlite3
utils/: __init__.py  db.py
utils/databases/: general.sqlite3
