[tool.poetry]
name = "pynotes"
version = "0.1.0"
description = "Take notes directly in your terminal."
authors = ["Saakshaat <saakshaat2001@gmail.com>"]
license = "MIT"
repository = "https://github.com/Saakshaat/notes-cli"


[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
notes = "pynotes.notes:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
